--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -1,69 +1,77 @@
 @use '../../../../styles/settings' as *;
 
 main .form form .panel-repeatable-panel {
+  .field-wrapper {
+    color: $text-primary;
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
 
-    .repeatable-entries {
-        .repeatable-entry {
-            padding: $spacing-400;
-            border: solid 1px $color-secondary;
-            position: relative;
+  .field-label {
+    margin-bottom: 12px;
+  }
 
-            &__edit {
-                position: absolute;
-                top: $spacing-400;
-                right: $spacing-400;
-                width: 56px;
-                height: 26px;
-                background-image: url(./images/edit-icon.png);
-                background-repeat: no-repeat;
-                display: block;
-                text-decoration: underline;
-                padding-left: 28px;
-            }
-        }
-    }
+  .repeatable-entries {
+    .repeatable-entry {
+      padding: $spacing-400;
+      border: solid 1px $color-secondary;
+      position: relative;
 
-    .repeat-actions {
-        display: none;
-    }
-
-    .item-remove {
-        display: none !important;
-    }
-
-    .editing .item-add {
-        display: none !important;
-    }
-
-    [data-repeatable].saved {
-        display: none;
-    }
-
-    [data-repeatable]:not(.saved) {
+      &__edit {
+        position: absolute;
+        top: $spacing-400;
+        right: $spacing-400;
+        width: 56px;
+        height: 26px;
+        background-image: url(./images/edit-icon.png);
+        background-repeat: no-repeat;
         display: block;
+        text-decoration: underline;
+        padding-left: 28px;
+      }
     }
+  }
 
+  .repeat-actions {
+    display: none;
+  }
+
+  .item-remove {
+    display: none !important;
+  }
+
+  .editing .item-add {
+    display: none !important;
+  }
+
+  [data-repeatable].saved {
+    display: none;
+  }
+
+  [data-repeatable]:not(.saved) {
+    display: block;
+  }
+
+  .btn-save,
+  .btn-cancel {
+    display: none;
+  }
+
+  [data-repeatable] .button-bar {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+  }
+
+  [data-repeatable].current {
     .btn-save,
     .btn-cancel {
-        display: none;
+      display: block;
     }
+  }
 
-    [data-repeatable] .button-bar {
-        display: flex;
-        gap: 20px;
-        margin-top: 20px;
-    }
-
-    [data-repeatable].current {
-
-        .btn-save,
-        .btn-cancel {
-            display: block;
-        }
-    }
-
-    .repeatable-entry {
-        border: solid $color-secondary 1px;
-        border-radius: $border-radius-large;
-    }
+  .repeatable-entry {
+    border: solid $color-secondary 1px;
+    border-radius: $border-radius-large;
+  }
 }
