--- a/blocks/form/components/repeatable-panel/education/education.css
+++ b/blocks/form/components/repeatable-panel/education/education.css
@@ -1,3 +1,3 @@
-main .form form .panel-repeatable-panel__education{display:none}
+main .form form .panel-repeatable-panel__education{display:none}main .form form .panel-repeatable-panel__education .repeatable-entry__course{font-size:1.125rem;line-height:160%}
 
 /*# sourceMappingURL=education.css.map */
