--- a/blocks/form/components/course/course.css
+++ b/blocks/form/components/course/course.css
@@ -1,3 +1,3 @@
-.course{position:relative}.course .suggestions{border:1px solid #ccc;border-top:none;max-height:9.375rem;overflow-y:auto;background-color:#fff;position:absolute;width:100%;z-index:1000;bottom:-1.125rem;left:0}.course .suggestion{padding:0.625rem;cursor:pointer}.course .suggestion:hover{background-color:#f0f0f0}
+.course{position:relative}.course .suggestions{box-shadow:0 0.25rem 0.5rem rgba(22, 44, 69, 0.18);border-radius:8px;background-color:#ffffff;max-height:9.375rem;overflow-y:auto;position:absolute;width:100%;z-index:1;bottom:-1rem;left:0}.course .suggestion{padding:0.5rem 0.75rem;cursor:pointer;font-size:1.25rem;color:#666666}.course .suggestion:hover{color:#333333;background-color:#e6f2fa}
 
 /*# sourceMappingURL=course.css.map */
