--- a/blocks/form/components/course/course.scss
+++ b/blocks/form/components/course/course.scss
@@ -1,25 +1,30 @@
+@use '../../../../styles/settings' as *;
+
 .course {
-    position: relative;
+  position: relative;
 
-    .suggestions {
-        border: 1px solid #ccc;
-        border-top: none;
-        max-height: 9.375rem;
-        overflow-y: auto;
-        background-color: #fff;
-        position: absolute;
-        width: 100%;
-        z-index: 1000;
-        bottom: -18px;
-        left: 0;
-    }
+  .suggestions {
+    @include elevation-2;
+    border-radius: $border-radius-mid;
+    background-color: $color-white;
+    max-height: 9.375rem;
+    overflow-y: auto;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+    bottom: -16px;
+    left: 0;
+  }
 
-    .suggestion {
-        padding: 10px;
-        cursor: pointer;
-    }
+  .suggestion {
+    padding: $spacing-200 $spacing-300;
+    cursor: pointer;
+    font-size: 20px;
+    color: $stroke-secondary;
 
-    .suggestion:hover {
-        background-color: #f0f0f0;
+    &:hover {
+      color: $text-primary;
+      background-color: $color-shade-blue-10;
     }
+  }
 }
