Style(mixins/button): Remove pink outline

--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -22,7 +22,7 @@ $color-tertiary-green-light: #e0f0de; // MSD Green light
 $color-tertiary-grey: #696969; // MSD Grey
 
 // Focus State
-$color-focus-state: #b53cde;
+/* $color-focus-state: #b53cde;*/  //Removed for now RW
 
 // Neutral Colours
 $color-grey-black-05: #f2f2f2;
