style(form): SEPD-3715 repeatable panel border

--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -14,8 +14,9 @@ main .form form .panel-repeatable-panel {
   .repeatable-entries {
     .repeatable-entry {
       padding: $spacing-400 $spacing-900 $spacing-400 $spacing-400;
-      border: solid 1px $color-secondary;
+      border: solid 1px $stroke-secondary;
       position: relative;
+      border-radius: $border-radius-large;
 
       &__edit {
         position: absolute;
