Style(Styling): Form headings, bottom spacings

--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -224,7 +224,7 @@ ul li {
 
   h3 {
     margin: 0;
-    padding-bottom: $spacing-200; // as per figma
+    padding-bottom: $spacing-200;
   }
 
   h4 {
@@ -239,7 +239,7 @@ ul li {
 
   h6 {
     margin: 0;
-    padding-bottom: $spacing-100;
+    padding-bottom: $spacing-200; // new
   }
 }
 
