fix(form): SEPD-3715 repeatable panel to education

--- a/blocks/form/components/repeatable-panel/education/education.css
+++ b/blocks/form/components/repeatable-panel/education/education.css
@@ -1,3 +1,3 @@
-main .form form .panel-repeatable-panel__education{display:none}main .form form .panel-repeatable-panel__education .repeatable-entry__course{font-size:1.125rem;line-height:160%}
+main .form form .panel-repeatable-panel__education{display:none}main .form form .panel-repeatable-panel__education .repeatable-entry__course{font-size:1.125rem;line-height:160%}main .form form .panel-repeatable-panel__education .repeatable-entry__nc-search--box{font-size:1.125rem;line-height:160%;color:#333333;font-weight:700}main .form form .panel-repeatable-panel__education .repeatable-entry__completion-status, main .form form .panel-repeatable-panel__education .repeatable-entry__start-year{line-height:160%}main .form form .panel-repeatable-panel__education .repeatable-entry__completion-status{color:#666666}
 
 /*# sourceMappingURL=education.css.map */
