--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -10,7 +10,7 @@ h4,
 h5,
 h6 {
   font-family: $font-family;
-  margin-bottom: 32px;
+ /* margin-bottom: 32px; */  // removing testing RW
 
   &:last-child:not(:first-child) {
     margin-bottom: 0;
@@ -211,6 +211,11 @@ ul li {
 /* ------------------------------
    Form Heading Adjustments
 ------------------------------ */
+.wizard .panel-formwelcome .panel-formwelcome__item-content p h6 {margin: 0;
+  padding-bottom: $spacing-200;
+  border: 2px solid deeppink; // testing RW
+}
+
 .form-wrapper [class*='field-wrapper'] {
   h1 {
     margin: 0;
@@ -239,7 +244,7 @@ ul li {
 
   h6 {
     margin: 0;
-    padding-bottom: $spacing-200; // new
+    padding-bottom: $spacing-200;
   }
 }
 
