--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -22,7 +22,7 @@
     padding: 32px 16px 45px;
 
     @include media('desktop') {
-      padding: 60px 0;
+      /*padding: 60px 0;*/ removed for spacing reasions RW
       margin: 32px auto;
       width: 100%;
       max-width: 930px;
@@ -42,7 +42,7 @@
     width: 100%;
 
     @include media('desktop') {
-      margin-top: 32px;
+      /*margin-top: 32px;*/  // removing and adding to wrapper instead RW
     }
 
     .wizard-button-next {
