--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -215,7 +215,7 @@ ul li {
 .wizard .panel-formwelcome .panel-formwelcome__item-content p h6 {
   margin: 0;
   padding-bottom: $spacing-200;
-  border: 2px solid deeppink; // testing RW
+  border: 2px solid deeppink; // testing Rebecca
 }
 
 .form-wrapper [class*='field-wrapper'] {
