--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -1,12 +1,44 @@
-/// Temporarily solution to extract placeholder
-/// To be used by external file
-
 @use '../settings/elevations' as *;
 @use '../settings/colors' as *;
 @use '../settings/spacings' as *;
 @use '../settings/utils' as *;
 @use '../settings/borders' as *;
 
+/******************************
+      Contextual Help Mixins
+*******************************/
+@mixin panel-help-base($bg-color, $text-color, $link-color) {
+  background-color: $bg-color;
+  color: $text-color;
+
+  .panel-formcontextualhelp__title {
+    color: $text-color;
+  }
+
+  .plain-text-wrapper,
+  .plain-text-wrapper p {
+    color: $text-color;
+  }
+
+  .panel-formcontextualhelp__footer__link-text {
+    color: $link-color;
+
+    &:hover,
+    &:focus {
+      text-decoration: underline;
+    }
+  }
+}
+
+@mixin panel-help-icon-invert {
+  .panel-formcontextualhelp__icon {
+    filter: brightness(0) invert(1); // white icon for dark backgrounds
+  }
+}
+
+/******************************
+      Button Placeholder Styles
+*******************************/
 %button {
   @include elevation-2;
   border-radius: $border-radius-round;
@@ -19,7 +51,7 @@
   transition: all 0.2s ease-in-out;
 
   &:focus {
-    box-shadow: 0 0 0 2px $color-white;/* 0 0 0 4px $color-focus-state;*/
+    box-shadow: 0 0 0 2px $color-white; /* focus ring */
     outline: 3px solid transparent;
   }
 
@@ -28,16 +60,10 @@
     font-size: 16px;
   }
 
-  /*
-    PRIMARY
-  */
   &.primary {
     @extend %button--primary;
   }
 
-  /*
-    HOLLOW
-  */
   &.hollow,
   &.secondary {
     @extend %button--hollow;
@@ -120,9 +146,9 @@
   }
 }
 
-
-// contextual help panel colourways
-
+/******************************
+      Contextual Help Colourways
+*******************************/
 .panel-formcontextualhelp--primary {
   @include panel-help-base($color-white, $text-primary, $text-accent);
 }
