fix(form): radio group icon

--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -19,7 +19,7 @@
   }
 
   .radio-group--with-icon--list-search-1 {
-    content: url('./icon-streamline.svg');
+    content: url('../../../../icons/icon-streamline.svg');
   }
 
   .radio-group--with-icon--smiley-face {
