--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -25,7 +25,8 @@
       padding: $spacing-600 0;
       margin: 32px auto;
       width: 100%;
-      max-width: 930px;
+     /* max-width: 930px; */ // Figma is 1038px
+      max-width: 1038px;
     }
   }
 
