Style(Styling): Removing test colour

--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -245,8 +245,7 @@ ul li {
 
   h6 {
     margin: 0;
-    /*padding-bottom: $spacing-200;*/
-    padding-bottom: 100px; // testing
+    padding-bottom: $spacing-200;
   }
 }
 
