Style(Styling): Changes in padding ul ol

--- a/styles/base/_elements.scss
+++ b/styles/base/_elements.scss
@@ -28,7 +28,7 @@ ul {
   li {
     font-size: $size-font-base;
     line-height: 1.6;
-    margin-bottom: $spacing-200;
+    margin-bottom: $spacing-100; // Requested change 2729
 
     &::marker {
       color: $color-grey-black-80;
