--- a/styles/settings/_spacings.scss
+++ b/styles/settings/_spacings.scss
@@ -1,4 +1,20 @@
-$spacing-000: 0;
+$spacing-000: 0; // Always 0
+
+$spacing-050: clamp(0.125rem, 0.3vw, 0.125rem); // 2px
+$spacing-100: clamp(0.25rem, 0.6vw, 0.25rem);   // 4px
+$spacing-200: clamp(0.5rem, 1vw, 0.5rem);       // 8px
+$spacing-300: clamp(0.75rem, 1.5vw, 0.75rem);   // 12px
+$spacing-400: clamp(1rem, 2vw, 1rem);           // 16px
+$spacing-450: clamp(1.25rem, 2.5vw, 1.25rem);   // 20px
+$spacing-500: clamp(1.5rem, 3vw, 1.5rem);       // 24px
+$spacing-600: clamp(2rem, 4vw, 2rem);           // 32px
+$spacing-650: clamp(2.5rem, 5vw, 2.5rem);       // 40px
+$spacing-700: clamp(3rem, 6vw, 3rem);           // 48px
+$spacing-800: clamp(4rem, 8vw, 4rem);           // 64px
+
+
+
+/*$spacing-000: 0;
 $spacing-050: 2px;
 $spacing-100: 4px;
 $spacing-200: 8px;
@@ -7,4 +23,4 @@ $spacing-400: 16px;
 $spacing-500: 24px;
 $spacing-600: 32px;
 $spacing-700: 48px;
-$spacing-800: 64px;
+$spacing-800: 64px;*/
