--- a/blocks/form/components/formwelcome/formwelcome.scss
+++ b/blocks/form/components/formwelcome/formwelcome.scss
@@ -28,12 +28,12 @@
 
     .panel-formwelcome__header {
       @include media('desktop') {
-        max-width: 513px;
+        max-width: 498px;
       }
 
       h2 {
         @include heading-level-3;
-        margin-bottom: 32px;
+        margin-bottom: $spacing-600;
 
         @include media('desktop') {
           @include heading-level-1;
