--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -16,7 +16,11 @@
     width: 40px;
     height: 40px;
     display: block;
-    content: url('./icon-streamline.svg');
+   /* content: url('./icon-streamline.svg'); **/  // testing RW
+    background-image: url('./icon-streamline.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+
   }
 
   label {
@@ -39,7 +43,8 @@
         &:after {
           left: auto;
           top: auto;
-          bottom: $spacing-400 + 1px;
+          /* bottom: $spacing-400 + 1px; */ // testing RW
+          bottom: calc(#{$spacing-400} + 1px);
           margin: 0 auto;
         }
       }
