--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -150,7 +150,8 @@ textarea {
   position: relative;
   padding-left: 28px;
   margin-top: $spacing-200;
-  color: $color-feedback-red;
+  /*color: $color-feedback-red;*/ // testing
+  color: $color-feedback-green;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.4;
