Style(Styling): Error message forms 1

--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -150,10 +150,9 @@ textarea {
   position: relative;
   padding-left: 28px;
   margin-top: $spacing-200;
-  /*color: $color-feedback-red;*/ // testing
-  color: $color-feedback-green;
+  color: $color-feedback-red;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 700;
   line-height: 1.4;
   font-family: $font-family;
 
