--- a/blocks/form/components/education/education.scss
+++ b/blocks/form/components/education/education.scss
@@ -1,4 +1,4 @@
-@use '../../../../../styles/settings' as *;
+@use '../../../../styles/settings' as *;
 
 main .form form .panel-repeatable-panel {
   &__education {
