--- a/blocks/form/components/education/education.scss
+++ b/blocks/form/components/education/education.scss
@@ -1,28 +1,24 @@
 @use '../../../../styles/settings' as *;
 
-main .form form .panel-repeatable-panel {
-  &__education {
-    display: none;
-
+main .form form .panel-repeatable-panel__education {
     .repeatable-entry {
-      &__course {
-        @include font-body-large;
-      }
+        &__course {
+            @include font-body-large;
+        }
     }
 
     .repeatable-entry__nc-search--box {
-      @include font-body-large;
-      color: $text-primary;
-      font-weight: 700;
+        @include font-body-large;
+        color: $text-primary;
+        font-weight: 700;
     }
 
     .repeatable-entry__completion-status,
     .repeatable-entry__start-year {
-      line-height: 160%;
+        line-height: 160%;
     }
 
     .repeatable-entry__completion-status {
-      color: $text-secondary;
+        color: $text-secondary;
     }
-  }
 }
