Style(Styling): Updating radios for language

--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -5,7 +5,7 @@
 
   .radio-group--with-icon__label {
     padding: $spacing-400;
-    border: 1px solid $stroke-primary;
+    border: 1px solid $stroke-tertiary;
     border-radius: $border-radius-large;
     display: flex;
     flex-direction: column;
