--- a/styles/settings/_index.scss
+++ b/styles/settings/_index.scss
@@ -1,4 +1,4 @@
-$spacing-600// --- !!!!!!!!!! ---
+// --- !!!!!!!!!! ---
 /// Settings is for extract-able value, things like
 /// $ Variables, % Placeholder, @include mixin
 /// Not a class name ".something", because this will be
