--- a/blocks/form/form.scss
+++ b/blocks/form/form.scss
@@ -89,7 +89,7 @@ form output {
 }
 
 form:not(.edit-mode) [data-visible='false'] {
-  display: none;
+  display: none !important;
 }
 
 // main .form-container {
